Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113619

Incorrect moc file generated when using QOffscreenSurface

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • 6.5.2, 6.6.0
    • 6.5.0
    • Build tools: moc
    • None
    • All
    • fd565750f (dev), dd7323918 (6.5)

    Description

      I have a header file with a class that needs moc. The class has a QOffscreenSurface member, so I need to #include <QtGui/QOffscreenSurface>.

      In this case, moc generates a source file that doesn't compile:

       
      fatal error: QScreen: No such file or directory
       
      It's because the Q_MOC_INCLUDE(<QScreen>) annotation in qoffscreensurface.h has an invalid path (should be QtGui/QScreen)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            jh_c j j
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes